2006-10-09 Joerg Wunsch <j@uriah.heep.sax.de>

	Submitted by freckle@sf.net:
	* stk500.c (stk500_paged_write): Send the command and the data
	payload within a single write().
	patch #5025: Improve stk500.c robustness

	Submitted by Matthias Ringwald:
	* stk500.c (stk500_open): do not flush the serial line after
	getting in sync with the programmer.
	patch #5293: stk500.c: no drain after sync (-> allow BTnode
	Bootloader to work on cygwin)

2006-09-29 Joerg Wunsch <j@uriah.heep.sax.de>

	* pgm.h: Fix prototype for gettimeofday().
	Closes bug #17884: another gettimeofday conflict under win32/cygwin

2006-09-24 Joerg Wunsch <j@uriah.heep.sax.de>

	Submitted by Thomas Fischl (initially):
	* configure.ac: Add the CoreFoundation and IOKit framework
	linker flags on MacOS X when configuring for USB support.
	patch #4685: Libusb on MacOS X: detection and additional includes

2006-09-20 Joerg Wunsch <j@uriah.heep.sax.de>

	* avr910.c: As there is a lot of ambiguity about the AVR910
	device codes, allow the user to override the device code
	verification with the -F option.
	* main.c: Make ovsigck a global variable.

2006-09-20 Joerg Wunsch <j@uriah.heep.sax.de>

	Add the "stk500generic" programmer that auto-probes for STK500
	either firmware version 1 or 2.
	* Makefile.am (avrdude_SOURCES): add the new files
	stk500generic.c and stk500generic.h.
	* avrdude.conf.in: Add the stk500generic programmer type, and
	change the "stk500" entry to point to this programmer.
	* config_gram.y: Add the stk500generic keyword.
	* lexer.l: (Ditto.)
	* stk500.c: Change the stk500v1 code to not call exit()
	prematurely when failing to open the programmer, but instead
	return an error status.
	* stk500generic.c: (New file.) Stub programmer implementation.
	Probe for either stk500v1 or stk500v2, and adjust the current pgm
	appropriately.
	* stk500generic.h: (New file.) Declare the public interface(s)
	of stk500generic.c.
	* doc/avrdude.texi: Document the changed behaviour of stk500.
